<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Fragment_Change_Background"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->



    <TextView
        android:id="@+id/textView_change_theme_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:text="@string/change_theme_title" />

    <Button
        android:id="@+id/button_night_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_background_black"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/change_theme_night_theme" />

    <Button
        android:id="@+id/button_default_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_background_default"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/change_theme_default_theme" />


    <TextView
        android:id="@+id/textView_change_theme_video_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:text="@string/change_theme_video" />

    <Button
        android:id="@+id/button_winter_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_background_blue"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/change_theme_winter_theme" />

    <Button
        android:id="@+id/button_spring_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_background_yellow"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/change_theme_spring_theme" />
    <Button
        android:id="@+id/button_summer_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_background_red"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/change_theme_summer_theme" />

    <Button
        android:id="@+id/button_autmn_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_background_green"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/change_theme_autmn_theme" />

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:id="@+id/viewPager"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </androidx.viewpager.widget.ViewPager>
</LinearLayout>