<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_switch"
        android:title="Switch"
        android:orderInCategory="100"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_restart_video"
        android:orderInCategory="100"
        android:icon="@drawable/ic_cached_black_24dp"
        app:showAsAction="ifRoom"
        android:title="" />
<item

    android:id="@+id/action_change_account"
    android:orderInCategory="100"
    android:title="@string/main_activity_change_account"
    app:showAsAction="never" />

<item
    android:id="@+id/action_delete_account"
    android:orderInCategory="100"
    android:title="@string/main_activity_delete_account"
    app:showAsAction="never" />
<item
    android:id="@+id/action_exit_application"
    android:orderInCategory="100"
    android:title="@string/main_activity_exit_application"
    app:showAsAction="never" />
</menu>


