<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Fragment_About_Us">

    <!-- TODO: Update blank fragment layout -->



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TextView
        android:id="@+id/textView_about_us_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:layout_centerHorizontal="true"
        android:text="@string/about_us_title" />

        <TextView
            android:id="@+id/textView_about_us_context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_below="@id/textView_about_us_title"
            android:text="@string/about_us_context" />


        <TextView
            android:id="@+id/textView_about_us_facts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_below="@id/textView_about_us_context"
            android:text="@string/about_us_fact_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_about_us_facts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_about_us_facts"
            />


    </RelativeLayout>
</FrameLayout>