<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activity.HomeScreen">

    <ImageView
        android:id="@+id/imageView_Logo"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:src="@drawable/sezar_icon_main" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/imageView_Logo">

        <TextView
            android:id="@+id/textView_home_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/home_screen_title" />

        <ImageButton
            android:id="@+id/imageButton_home_screen_read_encrypted_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/textView_home_screen_title"
            app:srcCompat="@drawable/ic_security_black_24dp" />
        <ImageButton
            android:id="@+id/imageButton_home_screen_write_encrypted_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/textView_home_screen_title"
            app:srcCompat="@drawable/ic_message_black_24dp" />
        <ImageButton
            android:id="@+id/imageButton_home_screen_encrypted_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/textView_home_screen_title"
            app:srcCompat="@drawable/ic_list_black_24dp" />

        <TextView
            android:id="@+id/textView_home_screen_read_encrypted_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_below="@id/imageButton_home_screen_read_encrypted_message"
            android:layout_marginStart="20dp"
            android:text="@string/home_screen_read_encrypted_message" />

        <TextView
            android:id="@+id/textView_home_screen_write_encrypted_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_below="@id/imageButton_home_screen_read_encrypted_message"
            android:layout_centerHorizontal="true"
            android:text="@string/home_screen_write_encrypted_message" />

        <TextView
            android:id="@+id/textView_home_screen_encrypted_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/imageButton_home_screen_encrypted_messages"
            android:text="@string/home_screen_encrypted_message" />
        <ImageButton
            android:id="@+id/imageButton_home_screen_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/textView_home_screen_read_encrypted_message"
            app:srcCompat="@drawable/ic_settings_black_24dp" />
        <ImageButton
            android:id="@+id/imageButton_home_screen_about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_below="@id/textView_home_screen_write_encrypted_message"
            app:srcCompat="@drawable/ic_accessibility_black_24dp" />
        <ImageButton
            android:id="@+id/imageButton_home_screen_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_below="@id/textView_home_screen_encrypted_messages"
            app:srcCompat="@drawable/ic_contacts_black_24dp" />

        <TextView
            android:id="@+id/textView_home_screen_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_below="@id/imageButton_home_screen_settings"
            android:layout_marginStart="25dp"
            android:text="@string/home_screen_encrypted_change_background" />

        <TextView
            android:id="@+id/textView_home_screen_about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_below="@id/imageButton_home_screen_about_us"
            android:layout_centerHorizontal="true"
            android:text="@string/home_screen_encrypted_change_about_us" />

        <TextView
            android:id="@+id/textView_home_screen_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/imageButton_home_screen_contact_us"
            android:text="@string/home_screen_encrypted_change_contact_us" />
    </RelativeLayout>


</RelativeLayout>