<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Fragment_Contact_Us">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TextView
            android:id="@+id/textView_contact_us_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:text="@string/contact_us_title" />

        <TextView
            android:id="@+id/textView_contact_us_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_below="@id/textView_contact_us_title"
            android:text="@string/contact_us_email" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_contact_us_email"
            />
        <EditText
            android:id="@+id/editText_contact_us_message_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerView_contact_us"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:hint="@string/write_encrypted_message_message_edit_text"
            android:paddingStart="10dp"
            android:maxLines="6"
            android:lines="6"
            android:textColor="@color/button_background"
            android:gravity="top|start"
            android:background="@drawable/inputs"
            android:inputType="textMultiLine" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_email_black_24dp" />

    </RelativeLayout>

</FrameLayout>